--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Ramadhan Display | Purwokerto</title>
+<title>Ramadhan Display Auto TV | Purwokerto</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
@@ -16,8 +16,16 @@
   --muted:#94a3b8;
   --active:#10b981;
 }
+
 *{box-sizing:border-box;font-family:'Inter',sans-serif}
-body{margin:0;background:radial-gradient(circle at 30% 30%,#1e293b,var(--bg));color:var(--text);min-height:100vh;padding:20px;transition:.4s ease}
+body{
+  margin:0;
+  background:radial-gradient(circle at 30% 30%,#1e293b,var(--bg));
+  color:var(--text);
+  min-height:100vh;
+  padding:20px;
+  transition:.4s ease;
+}
 
 .wrapper{
   display:grid;
@@ -28,7 +36,7 @@ body{margin:0;background:radial-gradient(circle at 30% 30%,#1e293b,var(--bg));co
   transition:.4s ease;
 }
 
-/* TV MODE ACTIVE */
+/* AUTO TV MODE */
 body.tv-mode .wrapper{
   grid-template-columns:1.2fr 1fr;
 }
@@ -40,48 +48,43 @@ body.tv-mode .wrapper{
   box-shadow:0 20px 60px rgba(0,0,0,.5);
 }
 
-.header-top{
+.header-row{
   display:flex;
   justify-content:space-between;
   align-items:center;
   margin-bottom:15px;
 }
 
-.tv-toggle{
-  background:rgba(34,211,238,.15);
-  color:var(--primary);
-  border:none;
-  padding:8px 14px;
-  border-radius:999px;
-  cursor:pointer;
-  font-size:12px;
-  font-weight:600;
-}
-
-.small-clock{
-  font-size:16px;
-  font-weight:600;
-  color:var(--primary);
-}
-
 .title{font-size:clamp(22px,3vw,34px);font-weight:800}
 .hijri{font-size:14px;color:var(--muted)}
+.small-clock{font-size:16px;font-weight:600;color:var(--primary)}
 .countdown-label{text-transform:uppercase;font-size:14px;letter-spacing:2px;color:var(--muted);margin-top:20px}
 .main-time{font-size:clamp(48px,7vw,96px);font-weight:800;letter-spacing:4px;color:var(--primary);margin-top:10px}
 .active-indicator{margin-top:16px;font-size:16px;font-weight:600;color:var(--active)}
+
 .table-wrapper{overflow:hidden;border-radius:20px}
 table{width:100%;border-collapse:collapse}
 th{background:#1f2937;padding:14px;font-size:12px;text-transform:uppercase;color:var(--muted)}
 td{padding:14px;border-bottom:1px solid #1e293b;font-size:14px}
 tr.today{background:rgba(34,211,238,.1);border-left:4px solid var(--primary)}
-.overlay{position:fixed;inset:0;background:rgba(0,0,0,.92);display:flex;align-items:center;justify-content:center;flex-direction:column;opacity:0;pointer-events:none;transition:.4s ease;z-index:999}
+
+.overlay{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.92);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  opacity:0;
+  pointer-events:none;
+  transition:.4s ease;
+  z-index:999;
+}
 .overlay.show{opacity:1}
 .overlay h1{font-size:clamp(40px,6vw,80px);color:var(--accent);margin:0}
 .overlay p{margin-top:12px;font-size:clamp(22px,4vw,36px)}
 
-@media(max-width:1100px){
-  body.tv-mode .wrapper{grid-template-columns:1fr}
-}
 </style>
 </head>
 <body>
@@ -94,15 +97,12 @@ tr.today{background:rgba(34,211,238,.1);border-left:4px solid var(--primary)}
 <div class="wrapper">
 
 <div class="panel">
-  <div class="header-top">
+  <div class="header-row">
     <div>
       <div class="title">Jadwal Ramadhan - Purwokerto</div>
       <div class="hijri" id="hijriDate">Hijriyah</div>
     </div>
-    <div style="text-align:right">
-      <div class="small-clock" id="smallClock">00:00:00</div>
-      <button class="tv-toggle" id="tvToggle">Aktifkan TV Mode</button>
-    </div>
+    <div class="small-clock" id="smallClock">00:00:00</div>
   </div>
 
   <div class="countdown-label" id="nextLabel">Menuju ...</div>
@@ -134,6 +134,25 @@ tr.today{background:rgba(34,211,238,.1);border-left:4px solid var(--primary)}
 </div>
 
 <script>
+/* ===============================
+   AUTO DETECT TV (STB FRIENDLY)
+================================*/
+function detectTVMode(){
+  const isLandscape = window.innerWidth > window.innerHeight;
+  const isAndroidTV = navigator.userAgent.toLowerCase().includes('android') && !navigator.userAgent.toLowerCase().includes('mobile');
+
+  if(isLandscape && isAndroidTV){
+    document.body.classList.add('tv-mode');
+    document.body.style.cursor='none';
+  }
+}
+
+window.addEventListener('load', detectTVMode);
+window.addEventListener('resize', detectTVMode);
+
+/* ===============================
+   DATA & DISPLAY
+================================*/
 const lat=-7.4242;
 const lon=109.2396;
 const method=20;
@@ -147,26 +166,9 @@ const overlayName=document.getElementById('overlayName');
 const smallClock=document.getElementById('smallClock');
 const hijriDate=document.getElementById('hijriDate');
 const activeIndicator=document.getElementById('activeIndicator');
-const tvToggle=document.getElementById('tvToggle');
 
 let ramadhanData=[];
 let todayPrayers=[];
-
-// Toggle TV Mode
-tvToggle.addEventListener('click',()=>{
-  document.body.classList.toggle('tv-mode');
-  if(document.body.classList.contains('tv-mode')){
-    tvToggle.textContent='Nonaktifkan TV Mode';
-    enableFullscreen();
-  }else{
-    tvToggle.textContent='Aktifkan TV Mode';
-  }
-});
-
-function enableFullscreen(){
-  const el=document.documentElement;
-  if(el.requestFullscreen) el.requestFullscreen();
-}
 
 async function init(){
 const year=new Date().getFullYear();
@@ -214,6 +216,7 @@ hijriDate.textContent=`${today.date.hijri.day} ${today.date.hijri.month.en} ${to
 
 const [dd,mm,yyyy]=today.date.gregorian.date.split('-').map(Number);
 const prayers=[
+{name:'Imsak',time:clean(today.timings.Imsak)},
 {name:'Subuh',time:clean(today.timings.Fajr)},
 {name:'Dzuhur',time:clean(today.timings.Dhuhr)},
 {name:'Ashar',time:clean(today.timings.Asr)},
