--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Ramadhan Display Auto TV | Purwokerto</title>
+<title>Ramadhan Display | Purwokerto</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
@@ -36,7 +36,6 @@ body{
   transition:.4s ease;
 }
 
-/* AUTO TV MODE */
 body.tv-mode .wrapper{
   grid-template-columns:1.2fr 1fr;
 }
@@ -58,6 +57,19 @@ body.tv-mode .wrapper{
 .title{font-size:clamp(22px,3vw,34px);font-weight:800}
 .hijri{font-size:14px;color:var(--muted)}
 .small-clock{font-size:16px;font-weight:600;color:var(--primary)}
+
+.tv-toggle{
+  margin-top:8px;
+  background:rgba(34,211,238,.15);
+  color:var(--primary);
+  border:none;
+  padding:6px 12px;
+  border-radius:999px;
+  cursor:pointer;
+  font-size:12px;
+  font-weight:600;
+}
+
 .countdown-label{text-transform:uppercase;font-size:14px;letter-spacing:2px;color:var(--muted);margin-top:20px}
 .main-time{font-size:clamp(48px,7vw,96px);font-weight:800;letter-spacing:4px;color:var(--primary);margin-top:10px}
 .active-indicator{margin-top:16px;font-size:16px;font-weight:600;color:var(--active)}
@@ -102,7 +114,10 @@ tr.today{background:rgba(34,211,238,.1);border-left:4px solid var(--primary)}
       <div class="title">Jadwal Ramadhan - Purwokerto</div>
       <div class="hijri" id="hijriDate">Hijriyah</div>
     </div>
-    <div class="small-clock" id="smallClock">00:00:00</div>
+    <div style="text-align:right">
+      <div class="small-clock" id="smallClock">00:00:00</div>
+      <button class="tv-toggle" id="tvToggle">Aktifkan TV Mode</button>
+    </div>
   </div>
 
   <div class="countdown-label" id="nextLabel">Menuju ...</div>
@@ -135,24 +150,58 @@ tr.today{background:rgba(34,211,238,.1);border-left:4px solid var(--primary)}
 
 <script>
 /* ===============================
-   AUTO DETECT TV (STB FRIENDLY)
+   TV MODE SYSTEM (AUTO + MANUAL)
 ================================*/
+
+const tvToggle = document.getElementById('tvToggle');
+
+function hideCursor(){ document.body.style.cursor='none'; }
+function showCursor(){ document.body.style.cursor='default'; }
+
+function applySavedTVMode(){
+  const saved = localStorage.getItem('tvMode');
+  if(saved === 'true'){
+    document.body.classList.add('tv-mode');
+    hideCursor();
+    tvToggle.textContent='Nonaktifkan TV Mode';
+  }
+}
+
 function detectTVMode(){
   const isLandscape = window.innerWidth > window.innerHeight;
   const isAndroidTV = navigator.userAgent.toLowerCase().includes('android') && !navigator.userAgent.toLowerCase().includes('mobile');
 
   if(isLandscape && isAndroidTV){
     document.body.classList.add('tv-mode');
-    document.body.style.cursor='none';
+    localStorage.setItem('tvMode','true');
+    hideCursor();
   }
 }
 
-window.addEventListener('load', detectTVMode);
-window.addEventListener('resize', detectTVMode);
+if(tvToggle){
+  tvToggle.addEventListener('click',()=>{
+    document.body.classList.toggle('tv-mode');
+    const active = document.body.classList.contains('tv-mode');
+    localStorage.setItem('tvMode',active);
+    if(active){
+      hideCursor();
+      tvToggle.textContent='Nonaktifkan TV Mode';
+    }else{
+      showCursor();
+      tvToggle.textContent='Aktifkan TV Mode';
+    }
+  });
+}
+
+window.addEventListener('load',()=>{
+  applySavedTVMode();
+  detectTVMode();
+});
 
 /* ===============================
    DATA & DISPLAY
 ================================*/
+
 const lat=-7.4242;
 const lon=109.2396;
 const method=20;
